syntax = "proto3";

package streamservice;

option go_package = "godemo/streamservice";

// 流服务定义
service StreamService {
	// 流式处理请求
	rpc ProcessRequest(Request) returns (stream Response) {}

	// 列出所有会话
	rpc ListSessions(Empty) returns (Response) {}
}

message Request {
	string json_data = 1;
}

message Response {
	string data = 1;
}

message Empty {}
